# Rust_lpc1768_Uart

./: Cargo.toml  README.md  firmware.hex  memory.x
src/: main.rs
