[package]
authors = ["Imply <ktakahata@imply.com>"]
edition = "2018"
readme = "README.md"
name = "teste_lpc"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"
lpc1769 = "0.0.1"
embedded-hal = "1.0.0"


[[bin]]
name = "teste_lpc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
